--- a/rocketlogger/README
+++ b/rocketlogger/README
@@ -2,3 +2,5 @@
 2.) mv teroslogger /bin #move executable to bin
 3.) chown/chrgp root teroslogger #make root the owner
 4.) chmod u+s /bin/teroslogger #set suid bit
+
+Test by running `teroslogger -t /dev/tty<ARDUINOUSB>`, it should create a log file with sensor readings.
